--- a/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
@@ -73,24 +73,24 @@ context:
       }
   news_and_events:
     - item:
-      meta: 'Event'
-      title: 'Designs for Real Life'
-      description: '6 July 2019 — 4 August 2019'
-      link: '#'
+      meta: 'News'
+      title: 'Dr Chantal Faust appointed as Head of Programme for MA Contemporary Art Practice'
+      description: '7 Oct 2020'
+      link: 'https://www.rca.ac.uk/news-and-events/news/dr-chantal-faust-appointed-head-programme-ma-contemporary-art-practice/'
       image: //placekitten.com/526/402
       person: false
     - item:
       meta: 'Event'
-      title: 'Redefining Boundaries: Architecture Work-in-progress 2019'
-      description: '23 November 2019'
-      link: '#'
+      title: 'RCASU Solidarity Series: Border Lines'
+      description: '19 Nov 2020'
+      link: 'https://www.rca.ac.uk/news-and-events/events/solidarity-series-border-lines/'
       image: false
       person: false
     - item:
       meta: 'News'
-      title: 'Show 2018: School of Architecture: Making Space for the Future'
-      description: '23 November 2019'
-      link: '#'
+      title: 'RCA Painting student wins £10,000 Castlegate Art Prize'
+      description: '16 Sept 2020'
+      link: 'https://www.rca.ac.uk/news-and-events/news/ma-painting-student-wins-10000-castlegate-art-prize/'
       image: //placekitten.com/251/142
       person: false
   worked_with: False
@@ -161,61 +161,15 @@ context:
           degree_level: Executive Education
           programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
           hero_image: http://placehold.it/300x270/ff5d1c/fff
-  stats_block:
-    title: Lorem ipsum dolor sit
-    link_url: '#'
-    link_text: See all Outcomes
-    statistics:
-      - stat:
-        value:
-          after: '%'
-          number: 70
-          summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper accumsan urna.
-      - stat:
-        value:
-          after: '%'
-          number: 33
-          meta: Nationalities
-          summary: 1 in 3 of our graduates are business owners or independent professionals
-      - stat:
-        value:
-          number: 76
-          meta: Nationalities
-          summary: Our students come from all corners of the globe.
-      - stat:
-        value:
-          after: st
-          number: 1
-          summary: We're the top rated art & design university in the world.
-      - stat:
-        value:
-          number: 100
-          meta: Lorem Ipsum
-          summary: Our students come from all corners of the globe.
+  stats_block: False
   student_stories:
     slides:
       - slide:
         value:
           meta: 'Student project'
-          title: 'RCA x CERN'
-          summary: 'Exploring how science, technology and design can propose solutions for international sustainability challenges.'
-          link: '#'
-          person: false
-          image: True
-      - slide:
-        value:
-          meta: 'Research'
-          title: 'Burberry'
-          summary: 'Promote a design-led disruptive research environment to develop new approaches to innovation in materials and applications.'
-          link: '#'
-          person: false
-          image: True
-      - slide:
-        value:
-          meta: 'Student project'
-          title: 'Designing the imposible for NASA'
-          summary: 'Creating world class experiences that started at the RCA'
-          link: '#'
+          title: 'RCA PhD student authors book on fashion illustration'
+          summary: 'Current PhD student, Yu Lun Eve Lin, (PhD Arts & Humanities), is hoping to inspire the next generation of Taiwanese fashion designers through her new book on fashion illustration.'
+          link: 'https://www.rca.ac.uk/news-and-events/news/rca-phd-student-authors-book-fashion-illustration/'
           person: false
           image: True
   instagram_feed: False
