--- a/rca/project_styleguide/templates/patterns/pages/schools/soc.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soc.yaml
@@ -82,24 +82,24 @@ context:
       }
   news_and_events:
     - item:
-      meta: 'Event'
-      title: 'Designs for Real Life'
-      description: '6 July 2019 — 4 August 2019'
-      link: '#'
+      meta: 'News'
+      title: 'Dr Rathna Ramanathan, Dean of the School of Communication, to stand down'
+      description: '13 Oct 2020'
+      link: 'https://www.rca.ac.uk/news-and-events/news/dr-rathna-ramanathan-dean-school-communication-stand-down/'
       image: //placekitten.com/526/402
       person: false
     - item:
-      meta: 'Event'
-      title: 'Redefining Boundaries: Architecture Work-in-progress 2019'
-      description: '23 November 2019'
-      link: '#'
+      meta: 'News'
+      title: 'Dr Danielle Barrios-O’Neill appointed Head of Programme for MA Information Experience Design'
+      description: '6 Oct 2020'
+      link: 'https://www.rca.ac.uk/news-and-events/news/dr-danielle-barrios-oneill-appointed-head-programme-ma-information-experience-design/'
       image: false
       person: false
     - item:
       meta: 'News'
-      title: 'Show 2018: School of Architecture: Making Space for the Future'
-      description: '23 November 2019'
-      link: '#'
+      title: 'DRAW Alumni Exhibition Explores the Human Power of Drawing'
+      description: '3 Jul 2018'
+      link: 'https://www.rca.ac.uk/news-and-events/news/draw-alumni-exhibition-explores-human-power-drawing/'
       image: //placekitten.com/251/142
       person: false
   worked_with:
@@ -188,26 +188,18 @@ context:
     slides:
       - slide:
         value:
-          meta: 'Student project'
-          title: 'RCA x CERN'
-          summary: 'Exploring how science, technology and design can propose solutions for international sustainability challenges.'
-          link: '#'
+          meta: 'Student story'
+          title: 'Show 2018 School of Communication: Questioning the Everyday'
+          summary: 'This year’s School of Communication graduate show asks its audience to question how information is consumed, disseminated and controlled.'
+          link: 'https://www.rca.ac.uk/news-and-events/news/show-2018-school-communication-questioning-everyday/'
           person: false
           image: True
       - slide:
         value:
-          meta: 'Research'
-          title: 'Burberry'
-          summary: 'Promote a design-led disruptive research environment to develop new approaches to innovation in materials and applications.'
-          link: '#'
-          person: false
-          image: True
-      - slide:
-        value:
-          meta: 'Student project'
-          title: 'Designing the imposible for NASA'
-          summary: 'Creating world class experiences that started at the RCA'
-          link: '#'
+          meta: 'Student story'
+          title: '2020 Pokémon Scholars Announced'
+          summary: 'The Pokémon Company and the Royal College of Art are proud to announce the winners of the third Pokémon Scholarship'
+          link: 'https://www.rca.ac.uk/news-and-events/news/2020-pok%C3%A9mon-scholars-announced/'
           person: false
           image: True
   instagram_feed:
@@ -269,10 +261,6 @@ context:
         link: '#'
       - slide:
         title: 'Dubit'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
         image: true
         link: '#'
   research_links:
