--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
@@ -83,7 +83,7 @@ context:
         image: //placekitten.com/500/500
         person: false
     contact: true
-    contact_image: true
+    contact_model_image: true
   related_pages_highlights:
     - slide:
       meta: 'School of Design'
