--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--dev-all-fields.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--dev-all-fields.yaml
@@ -175,7 +175,7 @@ context:
         image: //placekitten.com/500/500
         person: false
     contact: true
-    contact_image: true
+    contact_model_image: true
     related_pages_title: Enterprise at the RCA
     related_pages_text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
     page_list_title: Schools and Research centres
