--- a/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
@@ -16,19 +16,7 @@ context:
     social_links: False
     video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
     video_caption: Welcome to the School
-    body:
-      - dummy
-    tabs:
-      - tab:
-        title: About
-      - tab:
-        title: Our research
-      - tab:
-        title: Programmes & Short courses
-      - tab:
-        title: Staff
-      - tab:
-        title: Contact
+    body: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
     sections:
       about:
         title: What makes us different?
@@ -54,23 +42,26 @@ context:
   open_day_link:
     get_link_url: #
     get_link_text: Book or view all open days
-  about_teasers:
-    - {
-        title: 'Public programmes',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'School-wide public programmes include "SoAH presents" and "Urgency of the arts lectures" ',
-        image: true,
-      }
-    - {
-        title: 'Unique learning experience',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'The School of Arts & Humanities offers students and researchers the opportunity to develop their own practices and careers as artists, makers, historians, theorists, writers and curators. All are encouraged to focus in depth on the particularities of their own work while also being exposed to more critically diverse positions across the School.',
-        image: true,
-      }
+  page_teasers:
+    title: What makes us different?
+    summary: We teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs.
+    pages:
+      - {
+          title: 'Public programmes',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'School-wide public programmes include "SoAH presents" and "Urgency of the arts lectures" ',
+          image: true,
+        }
+      - {
+          title: 'Unique learning experience',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'The School of Arts & Humanities offers students and researchers the opportunity to develop their own practices and careers as artists, makers, historians, theorists, writers and curators. All are encouraged to focus in depth on the particularities of their own work while also being exposed to more critically diverse positions across the School.',
+          image: true,
+        }
   news_and_events:
     - item:
       meta: 'News'
@@ -324,6 +315,17 @@ context:
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+  tabs:
+    - tab:
+      title: About
+    - tab:
+      title: Our research
+    - tab:
+      title: Programmes & Short courses
+    - tab:
+      title: Staff
+    - tab:
+      title: Contact
 
 tags:
   include_block:
