--- a/rca/project_styleguide/templates/patterns/pages/schools/soc.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soc.yaml
@@ -17,19 +17,7 @@ context:
       - '<a href="https://www.instagram.com/rcasoc/">Instagram</a>'
     video: 'https://www.youtube.com/watch?v=hEV0YUfz52s&list=PLk-Jp7vRQvwNQ_B4fvlPpDcudkDtjItY9&index=2'
     video_caption: Welcome to the School
-    body:
-      - dummy
-    tabs:
-      - tab:
-        title: About
-      - tab:
-        title: Our research
-      - tab:
-        title: Programmes & Short courses
-      - tab:
-        title: Staff
-      - tab:
-        title: Contact
+    body: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
     sections:
       about:
         title: What makes us different?
@@ -55,31 +43,34 @@ context:
   open_day_link:
     get_link_url: #
     get_link_text: Book or view all open days
-  about_teasers:
-    - {
-        title: 'Free courses',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'Civic course, activities with local community.',
-        image: true,
-      }
-    - {
-        title: 'Creativity and innovation',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'We enable creativity and innovation. Critical making and thinking are supported and encouraged through facilitated forums for play, experimentation and risk-taking. The School’s  staff are experienced practitioners, researchers, academics and specialist visiting lecturers, who bring ‘real-world’ knowledge and the necessary guidance and support for the development of new ideas, methods or strategies.',
-        image: true,
-      }
-    - {
-        title: 'Evolve new views',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'We de-programme, de-mystify, de-compute and re-form. The opportunity for evolving new views of, and for, the world, arise through rigorous approaches to research, critical self-reflection and making. Students are encouraged to explore new territories and responses, often collaboratively across the College and through externally commissioned projects.',
-        image: true,
-      }
+  page_teasers:
+    title: What makes us different?
+    summary: We teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs.
+    pages:
+      - {
+          title: 'Free courses',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'Civic course, activities with local community.',
+          image: true,
+        }
+      - {
+          title: 'Creativity and innovation',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'We enable creativity and innovation. Critical making and thinking are supported and encouraged through facilitated forums for play, experimentation and risk-taking. The School’s  staff are experienced practitioners, researchers, academics and specialist visiting lecturers, who bring ‘real-world’ knowledge and the necessary guidance and support for the development of new ideas, methods or strategies.',
+          image: true,
+        }
+      - {
+          title: 'Evolve new views',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'We de-programme, de-mystify, de-compute and re-form. The opportunity for evolving new views of, and for, the world, arise through rigorous approaches to research, critical self-reflection and making. Students are encouraged to explore new territories and responses, often collaboratively across the College and through externally commissioned projects.',
+          image: true,
+        }
   news_and_events:
     - item:
       meta: 'News'
@@ -300,6 +291,17 @@ context:
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
+  tabs:
+    - tab:
+      title: About
+    - tab:
+      title: Our research
+    - tab:
+      title: Programmes & Short courses
+    - tab:
+      title: Staff
+    - tab:
+      title: Contact
 
 tags:
   include_block:
