Fix migrations and template rendering

--- a/rca/project_styleguide/templates/patterns/molecules/logo-card/logo-card.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/logo-card/logo-card.yaml
@@ -1,8 +1,9 @@
 context:
   item:
-    title: 'Show 2019: School of Architecture'
+    link:
+      title: 'Show 2019: School of Architecture'
+      url: '#'
     image: true
-    href: '#'
 
 tags:
   image:
