--- a/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
@@ -48,6 +48,14 @@ context:
     related_pages_title: Enterprise at the RCA
     staff_link: '#'
     staff_link_text: View all school staff
+    collaborators_heading: Organisations
+    collaborators:
+      - slide:
+        value:
+          link:
+            title: 'RIBA'
+            url: '#'
+          image: true
   hero_image:
     title: Synaputral Decadence is the flavour of the distant future
     creator: Jianjin Lee Chen
@@ -108,12 +116,6 @@ context:
       link: 'https://www.rca.ac.uk/news-and-events/events/amateur-architecture-possibilities-rural-urban-co-existence-china-part-co-liberation-international-lecture-series/'
       image: //placekitten.com/251/142
       person: false
-  worked_with:
-    slides:
-      - slide:
-        title: 'RIBA'
-        image: true
-        link: '#'
   programmes:
     - item:
       link:
