--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
@@ -20,12 +20,12 @@ context:
     video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
     video_caption: Watch the course introduction
     body: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+    research_projects_title: Our research
+    research_projects_text: Characterised by its roots in creative and innovative practice, by engagement with partners in business, industry, government and communities.
     sections:
       about:
         title: What makes us different?
         introduction: We teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs.
-      research:
-        introduction: Characterised by its roots in creative and innovative practice, by engagement with partners in business, industry, government and communities.
       programmes:
         introduction: We offer a range of Graduate Diploma, MA, MRes, MPhil and PhD degree programmes across the art and design disciplines.
       short_courses:
@@ -63,7 +63,23 @@ context:
             title: 'Red bull 4'
             url: '#'
           image: true
-
+    external_links_heading: Also…
+    external_links:
+      - item:
+        value: { text: 'Our research themes', href: 'http://www.google.com' }
+      - item:
+        value:
+          {
+            text: 'Architects Council of Europe (ACE)',
+            href: 'http://www.google.com',
+          }
+    research_cta_block:
+      - block:
+        value:
+          title: Lab. for Design & Machine Learning
+          description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
+          action: Find out more
+          link: '#'
   open_day_link:
     get_link_url: #
     get_link_text: Book or view all open days
@@ -269,6 +285,7 @@ context:
       image: true
       link: '#'
   student_research:
+    title: PhD student rResearch
     slides:
       - slide:
         value:
@@ -320,22 +337,6 @@ context:
         title: 'Red bull'
         image: true
         link: '#'
-  research_links:
-    title: Also…
-    links:
-      - item:
-        value: { text: 'Our research themes', href: 'http://www.google.com' }
-      - item:
-        value:
-          {
-            text: 'Architects Council of Europe (ACE)',
-            href: 'http://www.google.com',
-          }
-  research_cta:
-    title: Lab. for Design & Machine Learning
-    description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
-    action: Find out more
-    link: '#'
   programmes_cta:
     title: Custom executive education
     description: The RCA delivers senior-level custom executive education programmes for business, government, the public sector and universities globally.
