--- a/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
@@ -30,12 +30,13 @@ context:
         title: Staff
       - tab:
         title: Contact
+    research_projects_title: Our research
+    research_projects_text: Research in the School of Architecture centres on themes critical to contemporary social and spatial design challenges.
     sections:
       about:
         title: What makes us different?
         introduction: We teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs.
       research:
-        introduction: Research in the School of Architecture centres on themes critical to contemporary social and spatial design challenges.
         link: https://www.rca.ac.uk/study/schools/school-of-architecture/current-research/
       programmes:
         introduction: We offer a range of Graduate Diploma, MA, MRes, MPhil and PhD degree programmes across the art and design disciplines.
@@ -56,6 +57,22 @@ context:
             title: 'RIBA'
             url: '#'
           image: true
+    external_links_heading: Also...
+    external_links:
+      - item:
+        value: { text: 'Research students', href: '#' }
+      - item:
+        value: { text: 'List of supervisors', href: '#' }
+      - item:
+        value: { text: 'Research repository', href: '#' }
+    research_cta_block:
+      - block:
+        value:
+          title: Lab. for Design & Machine Learning
+          description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
+          action: Find out more
+          link: 'https://www.rca.ac.uk/study/schools/school-of-architecture/current-research/laboratory-design-machine-learning/'
+
   hero_image:
     title: Synaputral Decadence is the flavour of the distant future
     creator: Jianjin Lee Chen
@@ -241,6 +258,7 @@ context:
       image: true
       link: 'https://www.rca.ac.uk/research-innovation/projects/collective-forms/'
   student_research:
+    title: PhD student rResearch
     slides:
       - slide:
         value:
@@ -276,20 +294,6 @@ context:
         title: 'The Global School'
         image: true
         link: '#'
-  research_links:
-    title: Also…
-    links:
-      - item:
-        value: { text: 'Research students', href: '#' }
-      - item:
-        value: { text: 'List of supervisors', href: '#' }
-      - item:
-        value: { text: 'Research repository', href: '#' }
-  research_cta:
-    title: Lab. for Design & Machine Learning
-    description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
-    action: Find out more
-    link: 'https://www.rca.ac.uk/study/schools/school-of-architecture/current-research/laboratory-design-machine-learning/'
   programmes_links:
     title: Also…
     links:
