--- a/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
@@ -17,12 +17,13 @@ context:
     video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
     video_caption: Welcome to the School
     body: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
+    research_projects_title: Our research
+    research_projects_text: Research in the School of Arts & Humanities is driven by the individual concerns of academics and students. We work within an integrated research culture and our work informs every level of activity in the School.
     sections:
       about:
         title: What makes us different?
         introduction: We teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs.
       research:
-        introduction: Research in the School of Arts & Humanities is driven by the individual concerns of academics and students. We work within an integrated research culture and our work informs every level of activity in the School.
         link: https://www.rca.ac.uk/study/schools/school-of-arts-humanities/current-research/
       programmes:
         introduction: We offer a range of Graduate Diploma, MA, MRes, MPhil and PhD degree programmes across the art and design disciplines.
@@ -35,6 +36,24 @@ context:
     related_pages_title: Enterprise at the RCA
     staff_link: '#'
     staff_link_text: View all school staff
+    external_links_heading: Also...
+    external_links:
+      - item:
+        value: { text: 'Research students', href: '#' }
+      - item:
+        value: { text: 'Completed research projects', href: '#' }
+      - item:
+        value: { text: 'Research website', href: '#' }
+      - item:
+        value:
+          { text: 'Prova: The Arts & Humanities Research Journal', href: '#' }
+    research_cta_block:
+      - block:
+        value:
+          title: 'Prova: The Arts & Humanities Research Journal'
+          description: Archive for the School of Arts & Humanities's flagship lecture series
+          action: Find out more
+          link: 'https://www.rca.ac.uk/study/schools/school-of-arts-humanities/visual-cultures/'
   hero_image:
     title: Synaputral Decadence is the flavour of the distant future
     creator: Jianjin Lee Chen
@@ -183,6 +202,7 @@ context:
       image: true
       link: 'https://www.rca.ac.uk/research-innovation/projects/tai-shani-dc-productions/'
   student_research:
+    title: PhD student rResearch
     slides:
       - slide:
         value:
@@ -270,23 +290,6 @@ context:
         title: 'Art on the Underground'
         image: true
         link: '#'
-  research_links:
-    title: Also…
-    links:
-      - item:
-        value: { text: 'Research students', href: '#' }
-      - item:
-        value: { text: 'Completed research projects', href: '#' }
-      - item:
-        value: { text: 'Research website', href: '#' }
-      - item:
-        value:
-          { text: 'Prova: The Arts & Humanities Research Journal', href: '#' }
-  research_cta:
-    title: 'Prova: The Arts & Humanities Research Journal'
-    description: Archive for the School of Arts & Humanities's flagship lecture series
-    action: Find out more
-    link: 'https://www.rca.ac.uk/study/schools/school-of-arts-humanities/visual-cultures/'
   programmes_cta:
     title: Custom executive education
     description: The RCA delivers senior-level custom executive education programmes for business, government, the public sector and universities globally.
