--- a/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
@@ -145,6 +145,10 @@ context:
             title: 'Art on the Underground'
             url: '#'
           image: true
+    related_programmes_title: Our programmes
+    related_programmes_summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
+    related_short_courses_title: Our short courses
+    related_short_courses_summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
   hero_image:
     title: Synaputral Decadence is the flavour of the distant future
     creator: Jianjin Lee Chen
@@ -194,7 +198,7 @@ context:
       link: 'https://www.rca.ac.uk/news-and-events/news/ma-painting-student-wins-10000-castlegate-art-prize/'
       image: //placekitten.com/251/142
       person: false
-  programmes:
+  related_programmes:
     - item:
       link:
         url: '#'
@@ -245,7 +249,7 @@ context:
           degree_level: MA
           programme_description_subtitle: Turning innovation into successful real-world businesses.
           hero_image: http://placehold.it/500x500
-  short_courses:
+  related_short_courses:
     - item:
       link:
         url: '#'
