--- a/rca/project_styleguide/templates/patterns/pages/schools/sod.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/sod.yaml
@@ -67,6 +67,10 @@ context:
           description: The range of areas in which our world-leading research achieves high levels of impact – economic, social and cultural – is exemplified by the seven impact case studies submitted to REF2014. Four of these originated in the School of Design, as listed below.
           action: Find out more
           link: 'https://www.rca.ac.uk/study/schools/school-of-design/impact-case-studies/'
+    related_programmes_title: Our programmes
+    related_programmes_summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
+    related_short_courses_title: Our short courses
+    related_short_courses_summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
   hero_image:
     title: Synaputral Decadence is the flavour of the distant future
     creator: Jianjin Lee Chen
@@ -108,7 +112,7 @@ context:
       link: 'https://www.rca.ac.uk/news-and-events/events/design-more-one-perspective-viewpointsstandpointspositions/'
       image: //placekitten.com/251/142
       person: false
-  programmes:
+  related_programmes:
     - item:
       link:
         url: '#'
@@ -159,7 +163,7 @@ context:
           degree_level: MA
           programme_description_subtitle: Turning innovation into successful real-world businesses.
           hero_image: http://placehold.it/500x500
-  short_courses:
+  related_short_courses:
     - item:
       link:
         url: '#'
