--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -34,14 +34,11 @@ rules:
         - media-query
   no-warn: 0
   no-debug: 0
-  indentation:
-    - 1
-    - size: 4
+  indentation: false
   variable-for-property:
     - 0
   no-css-comments: 0
   class-name-format:
-    - 1
     - convention: hyphenatedbem
   force-pseudo-nesting: 0
   nesting-depth: 0
